fixed styling bleed

--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@
   color: #4c5d52;
 }
 
-.btn {
+.home-buttons .btn {
   background-color: #FF8C00;
   margin:25px;
   padding:25px 50px 25px 50px;
